src/App.css
.App {
  background-color: #ffefd5;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.HeaderBar {
  background-color: #ffefd5;
  display: flex;
  flex-grow: 1;
  height: 4vh;
  justify-content: space-between;
  margin-top: 1vh;
  margin-left: 10vw;
  margin-right: 10vw;
  font-family: "Baskerville";
  font-size: 12px;
  color: #0c3566;
  position: sticky;
  align-items: center;
}

.Content{
  height: 85vh;
  overflow-y: scroll;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}
.WelcomeWrapper {
  margin-top: 10vh;
  width: 100%;
  position: relative;
}
.Welcome {
  position: absolute;
  width: 100%;
  top: 10px;
  font-family: "Montserrat";
  font-style: italic;
  font-size: 150px;
  text-align: center;
  color: #0c3566;
}

.Welcome2 {
  position: absolute;
  width: 100%;
  left: -10px;
  font-family: "Montserrat";
  font-style: italic;
  font-size: 150px;
  text-align: center;
  color: #949598;
}

.Tagline {
  text-align: center;
  width: 700px;
  margin-top: 25vh;
  font-family: "Baskerville";
  font-size: 25px;
  color: #0c3566;
}

.Latest{
  margin-top: 5vh;
  font-family: "Montserrat";
  font-style: italic;
  width: 100%;
  text-align: center;
  font-size: 30px;
  color: #0c3566;
  padding-bottom: 5vh;
}

.Projects{
  font-family: "Montserrat";
  font-style: italic;
  font-size: 25px;
  color: #0c3566;
  width: 100%;
  padding-bottom: 3vh;
}

.Project{
  width: 625px;
}

.Link{
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.ProjectsMedia{
  width: 625px;
  height: 400px;
  padding-bottom: 3vh;
}

.ProjectsMedia:hover{
  opacity: 0.7;
}

.ProjectsDescription{
  font-family: "Baskerville";
  color: #0c3566;
  font-size: 20px;
  padding-bottom: 3vh;
}

.FooterBar {
  text-align: left;
  font-family: "Baskerville";
  background-color: #0c3566;
  height: 10vh;
  width: 100%;
  display: flex;
  color: #ffefd5;
  font-size: 20px;
}

.FooterButtons:hover {
  color: #949598;
}

.linkText{
  text-decoration: none;
  color: #ffefd5;
}

.FooterElement {
  flex-grow: 1;
  display: flex;
  justify-content: space-between;
  padding: 20px;
}

.FooterFiller{
  flex-grow: 4;
}

.AboutMe{
  background-color: #0c3566;
}

.AboutMeTitle{
  font-family: "Montserrat";
  font-style: italic;
  font-size: 30px;
  color: #ffefd5;
}

.AboutMeText{
  font-family: "Baskerville";
  font-size: 20px;
  color: #ffefd5;
}

.ContactMe{
  background-color: #ffefd5;
  font-family: "Baskerville";
  color: #0c3566;
  font-size: 10px;
  display: flex;
  flex-direction: column;
}

.ContactForm{
  display: flex;
  flex-direction: column;
}

.DesignsMedia{
  width: 625px;
  height: 400px;
  padding-bottom: 3vh;
}

.DiversiphiTitle{
  font-family: "Montserrat";
  font-style: italic;
  font-size: 25px;
  color: #0c3566;
  padding-bottom: 3vh;
  width: 625px;
}

.Diversiphi{
  width: 440px;
  height: 440px;
  padding-bottom: 3vh;
}

.DiversiphiDescription{
  font-family: "Baskerville";
  color: #0c3566;
  font-size: 20px;
  padding-bottom: 3vh;
  width: 625px;
}

